# Sign2Speech

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml  requirements-dev.txt
.claude/: settings.json
configs/: inference.yaml  train.yaml
docs/: setup.md
scripts/: capture_data.py  personalize.py  sign_to_speech.py  train.py
tests/: test_model.py
