[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "sign2speech"
version = "0.1.0"
description = "Bidirectional ASL sign language to speech app — no gloves, no headsets"
requires-python = ">=3.8"
readme = "README.md"
dependencies = [
    "ultralytics",
    "opencv-python",
    "pyttsx3",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "jupyter", "notebook"]
nlp = ["anthropic"]
stt = ["openai-whisper"]
